--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.2.1
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
