--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   sizer: ^2.0.15
+  animated_segmented_tab_control: ^1.2.0
 
 dev_dependencies:
   flutter_test:
