--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   otp_text_field: ^1.1.3
   carousel_slider: ^4.2.1
   shared_preferences: ^2.2.2
-  smooth_page_indicator: ^1.1.0
+  flutter_rating_bar: ^4.0.1
   sizer: ^2.0.15
   animated_segmented_tab_control: ^1.2.0
+  http: ^1.2.0
+  shimmer: ^2.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/Images/
+     - jsonData/data.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
